fixed elements overlapping

--- a/static/css/body.css
+++ b/static/css/body.css
@@ -66,8 +66,8 @@ main {
 }
 .setbox {
     position: relative;
-    width: 30%;
-    height: 40vw;
+    width: 20%;
+    height: 25vw;
     float: right;
     display: table-cell;
     text-align: center;
@@ -83,11 +83,11 @@ main {
     border-color: #bfbfbf;
 }
 .setbox:first-child {
-    margin-right: 2.5vw;
+    margin-right: 18vw;
 }
 .setbox h2{
     margin-top: 0vw;
-    font-size: 2.2vw;
+    font-size: 2vw;
     height: 6vw;
     background-color: #333;
     overflow: hide;
@@ -102,7 +102,7 @@ main {
     bottom: 0vw;
     margin-bottom: 0vw;
     text-align: left;
-    font-size: 3vw;
+    font-size: 1.5vw;
     color: black;
     background-color: #cccccc;
     border-width: .1vw;
